-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1
-
Fix Version/s: 10.1.24
-
Component/s: Storage Engine - InnoDB, Storage Engine - XtraDB
-
Labels:None
-
Sprint:10.1.24
Currently used LZ4_compress_limitedOutput() is marked as deprecated on newer lz4 releases. This issue is already fixed on 10.2.
- relates to
-
MDEV-11751 Merge new release of InnoDB MySQL 5.7.18 to 10.2
-
- Closed
-